test/conformance/chainsaw/cel-policy-exceptions/exclude-deployments/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: CELPolicyException
metadata:
  name: pod-security-exception
spec:
  policyRefs:
  - name: "check-deployment-labels"
    kind: ValidatingPolicy
  matchConditions:
    - name: "check-namespace"
      expression: "object.metadata.namespace == 'test-ns'"
