test/conformance/chainsaw/cel-policy-exceptions/exclude-deployments/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exclude-deployments
spec:
  steps:
  - name: step-01
    try:
    - create:
        file: policy.yaml
    - sleep:
        duration: 10s
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: step-03
    try:
    - create:
        file: exception.yaml
    - sleep:
        duration: 10s
  - name: step-04
    try:
    - apply:
        file: skipped-deployment.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-deployment.yaml
